# OpenProxifier

./: CMakeLists.txt  vcpkg.json
.github/workflows/: build-prerelease.yml  release-latest.yml
core/: LocalProxy.c  PacketProcessor.c  UdpRelay.c
hookdll/: CMakeLists.txt
